<resources>
    <string name="app_name">Minimap Example</string>
    <string name="parking_availability">Parking Availability: %d empty spots</string>
    <string name="toggle_last_line">Resize</string>
    <string name="action_test_size">Test maxSize</string>
    <string name="action_test_corner">Test cornerRadius</string>
    <string name="action_test_background">Test mapBackgroundColor</string>
    <string name="action_test_color">Test indicatorColor</string>
    <string name="action_test_border">Test borderWidth</string>
</resources>
